--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+/* Imports */
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+/* Overall Parameters */
+
 * {
     margin: 0;
     padding: 0;
@@ -5,5 +11,35 @@
 }
 
 h1 {
-    color: rgb(0, 122, 156);
+    color: #4149D9;
+    ;
 }
+
+/* Body */
+
+body {
+    font-family: 'Raleway', sans-serif;
+
+    background-color: #EFF4FB;
+}
+
+/* Navbar */
+
+.navbar {
+    display: flex;
+    padding: 15px;
+    gap: 50px;
+    width: 100vw;
+    background-color: #4149D9;
+    font-weight: 600;
+
+    & a {
+        text-decoration: none;
+        color: #f9f9f9;
+        transition: color 0.3s ease-in-out;
+    }
+    & a:hover {
+        color: #FFDAB9; 
+    }
+}
+
