--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,14 +148,14 @@ body {
     gap: 50px;
 }
 
-/* Topics */
+/* Contents */
 
-.topics-container {
+.contents-container {
     display: flex;
     flex-direction: column;
 }
 
-.topics-card {
+.contents-card {
     width: 765px;
     background: white;
     border-radius: 24px;
@@ -170,7 +170,7 @@ body {
         justify-content: space-between;
     }
 
-    & #btn-create-topic {
+    & #btn-create-content {
         height: 20px;
         width: 105px;
         background: none;
@@ -193,7 +193,7 @@ body {
 
 }
 
-.topics-card::before {
+.contents-card::before {
     content: '';
     position: absolute;
     top: 0;
@@ -204,21 +204,21 @@ body {
     border-radius: 24px 24px 0 0;
 }
 
-.topics-card h3 {
+.contents-card h3 {
     font-size: 1.75rem;
     font-weight: 700;
     margin: 0 0 0.5rem 0;
     color: #000;
 }
 
-.topics-card h4 {
+.contents-card h4 {
     font-size: 1.125rem;
     color: #666;
     font-weight: 400;
     margin: 0 0 1.5rem 0;
 }
 
-.topics-list {
+.contents-list {
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -227,7 +227,7 @@ body {
     gap: 1rem;
 }
 
-.topic-item {
+.content-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -237,16 +237,16 @@ body {
     transition: all 0.2s ease;
 }
 
-.topic-item:hover {
+.content-item:hover {
     color: #0077FF;
     transform: translateX(8px);
 }
 
-.topic-name {
+.content-name {
     font-size: 1.125rem;
 }
 
-.topics-list li:not(:last-child) .topic-item {
+.contents-list li:not(:last-child) .content-item {
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
