📦 NEW: Ajout de la déconnexion + ajout affichage de la page profil propre à l'utilisateur en session + début de la suppression d'un post par l'utilisateur qui l'a créé

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,26 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* Root */
+
+:root{
+
+    /* Colors */
+
+    --primary-white : #f9f9f9;
+    --primary-purple : #4149D9;
+    --primary-blue : #00BBFF;
+
+    --primary-grey : #9c9c9c;
+
+    --hover-light : #FFDAB9;
+
+    /* Font */
+
+    /* Transition */
+    --transition: color 0.3s ease-in-out;
+}
+
 /* Overall Parameters */
 
 * {
@@ -11,7 +31,7 @@
 }
 
 h1 {
-    color: #4149D9;
+    color: var(--primary-purple);
     ;
 }
 
@@ -30,16 +50,16 @@ body {
     padding: 15px;
     gap: 50px;
     width: 100vw;
-    background-color: #4149D9;
+    background-color: var(--primary-purple);
     font-weight: 600;
 
     & a {
         text-decoration: none;
-        color: #f9f9f9;
-        transition: color 0.3s ease-in-out;
+        color: var(--primary-white);
+        transition: var(--transition);
     }
     & a:hover {
-        color: #FFDAB9; 
+        color: var(--hover-light); 
     }
 }
 
@@ -70,8 +90,8 @@ body {
     height: 160px;
     border-radius: 15px;
     padding: 25px;
-    color: #f9f9f9;
-    background: linear-gradient(to right,#4149D9, #00BBFF);
+    color: var(--primary-white);
+    background: linear-gradient(to right,var(--primary-purple), var(--primary-blue));
 
     & label {
         display: flex;
@@ -85,7 +105,7 @@ body {
         height: 50px;
         width: 820px;
         border-radius: 5px;
-        border: 0.4px solid #9c9c9c;    
+        border: 0.4px solid var(--primary-grey);    
         padding: 10px;
         margin-right: 10px;
     }
@@ -94,21 +114,21 @@ body {
         height: 50px;
         width: 185px;
         background: none;
-        color: #f9f9f9;
+        color: var(--primary-white);
         font-size: 18px;
         font-weight: 300;
-        border: 2px solid #f9f9f9;
+        border: 2px solid var(--primary-white);
         border-radius: 10px;
         cursor: pointer;
         
         &:hover {
-            background: #f9f9f9;
-            color: #4149D9;
+            background: var(--primary-white);
+            color: var(--primary-purple);
         }
 
         &:active {
-            background: #f9f9f9b0;
-            color: #4149D9;
+            background: var(--primary-white)b0;
+            color: var(--primary-purple);
         }
     
     }
@@ -130,13 +150,24 @@ body {
     width: 1100px;
     height: 50px;
     border-radius: 15px;
-    color: #f9f9f9;
-    background: linear-gradient(to right,#4149D9, #00BBFF);
+    color: var(--primary-white);
+    background: linear-gradient(to right,var(--primary-purple), var(--primary-blue));
 
     & h2 {
         font-size: 18px;
         font-weight: 500;
     }
+
+    & a {
+        text-decoration: none;
+        color: var(--primary-white);
+        transition: var(--transition);
+    }
+
+    & a:hover {
+        color: var(--hover-light);
+    }
+
 }
 
 /* Content */
@@ -174,20 +205,20 @@ body {
         height: 20px;
         width: 105px;
         background: none;
-        color: #9c9c9c;
+        color: var(--primary-grey);
         font-size: 12px;
         font-weight: 300;
-        border: 2px solid #9c9c9c;
+        border: 2px solid var(--primary-grey);
         border-radius: 10px;
         cursor: pointer;
         
         &:hover {
-            color: #4149D9;
+            color: var(--primary-purple);
         }
 
         &:active {
-            background: #4149D9;
-            color: #f9f9f9;
+            background: var(--primary-purple);
+            color: var(--primary-white);
         }
     }
 
@@ -200,7 +231,7 @@ body {
     left: 0;
     right: 0;
     height: 8px;
-    background: linear-gradient(90deg, #4149D9, #0077FF);
+    background: linear-gradient(90deg, var(--primary-purple), #0077FF);
     border-radius: 24px 24px 0 0;
 }
 
@@ -275,7 +306,7 @@ body {
             height: 25px;
             width: 345px;
             border-radius: 10px;
-            border: 0.4px solid #9c9c9c;    
+            border: 0.4px solid var(--primary-grey);    
             padding: 10px;
             margin-right: 10px;
         }
@@ -306,8 +337,8 @@ body {
     left: 0;
     right: 0;
     height: 8px;
-    background: linear-gradient(90deg, #4149D9, #0077FF);
-    border-radius: 24px 24px 0 0;
+    background: linear-gradient(90deg, var(--primary-purple), #0077FF);
+    border-radius:inset 24px 24px 0 0;
 }
 
 /* Aside */
@@ -317,7 +348,7 @@ body {
     justify-content: center;
     flex-direction: column;
     border-radius: 25px;
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
     & li {
         list-style-type: none;
