--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,7 @@
     /* Borders */
     --border-grey : #9c9c9c6b;
     --border-black : #0c0c0c6b;
+    --border-purple : #4149D9;
     
     /* Hover */
     --hover-light : #FFDAB9;
@@ -253,8 +254,130 @@
 
 }
 
+/* Contents */
 
+.contents-container {
 
+    & .contents-form {       
+    display: none;
+    width: clamp(300px, 80vw, 685px);
+    background-color: var(--primary-white);
+    border-radius: 25px;
+    border: 1px solid var(--border-grey);
+    box-shadow: inset 0px 8px 0px -2px var(--primary-purple);
+
+        & .contents-form-header {
+            margin-bottom: 0.5rem;
+            border-bottom: 1px solid var(--border-grey);
+
+            & .form-title {
+                display: flex;
+                align-items: center;
+                position: relative;
+                border: none;
+                outline : none;
+                font-size: var(--font-size-text);
+                font-weight: var(--fw-semibold);
+                padding: 1rem;
+                gap: 0.5rem;
+
+                & input {
+                    width: clamp(150px, 80vw, 500px);
+                    height: 25px;
+                    border-radius: 10px;
+                    border: 1px solid var(--border-grey);
+                    padding-left: 0.5rem;
+                    
+                    &:focus {
+                        outline: 1px solid var(--primary-purple);
+                    }
+
+                    &::placeholder {
+                        color: var(--primary-grey);
+                        font-weight: var(--fw-semibold);
+                    }
+                
+                }
+
+                & .close-btn {
+                    cursor: pointer;
+                    background: none;
+                    position: absolute;
+                    right: 1rem;
+                    border: none;
+                    font-size: var(--font-size-text);
+                    font-weight: var(--fw-bold);
+                    color: var(--primary-black);
+                    transition: var(--transition);
+
+                    &:hover {
+                        color: var(--primary-purple);
+                    }
+
+                    &:active {
+                        color: var(--primary-grey);
+                    }
+                }
+            }
+        }
+
+        & .contents-form-main {
+            padding: 0.5rem;
+
+            & textarea {
+                resize: none;
+                border: none;
+                outline : none;
+                background: none;
+                width: 100%;
+                padding: 0.5rem 1rem;
+                font-size: var(--font-size-text);
+                font-weight: var(--fw-regular);
+
+                &:focus {
+                    border-radius: 10px;
+                    outline: 1px solid var(--primary-purple);
+                }
+
+                &::placeholder {
+                    color: var(--primary-grey);
+                    font-weight: var(--fw-semibold);
+                }
+            }
+        }
+
+        & .contents-form-footer {
+            display: flex;
+            justify-content: flex-end;
+            padding: 0.5rem 1rem;
+            gap: 1rem;
+            border: none; 
+
+            & .btn-publish-content {
+                cursor: pointer;
+                background: none;
+                border: none;
+                font-size: var(--font-size-text);
+                font-weight: var(--fw-bold);
+                color: var(--primary-purple);
+                transition: var(--transition);
+
+                &:hover {
+                    color: var(--primary-blue);
+                }
+
+                &:active {
+                    color: var(--primary-grey);
+                }
+            }
+        }
+    }
+
+    & .contents-form.active {
+        display: block;
+    }   
+
+}
 /* Buttons */
 
 .btn {
@@ -267,12 +390,12 @@
     padding: 0.2rem;
 }
 
-#btn-new-topic:hover {
+#btn-new-content:hover {
     border: 1px solid var(--primary-purple);
     color: var(--primary-purple);
 }
 
-#btn-new-topic:active {
+#btn-new-content:active {
     background-color: var(--primary-purple);
     color: var(--primary-white);
 }
