--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,16 +8,26 @@
 
     /* Colors */
     --primary-white : #f9f9f9;
-    --primary-grey : #9c9c9c;
     --primary-black : #0c0c0c;
+    --primary-grey : #9c9c9c;
     --primary-purple : #4149D9;
     --primary-blue : #00BBFF;
     --primary-dark-blue: #0000aa;
+    --primary-cyan : #4285F4;
+    --primary-green : #42B883;
+    --primary-emerald : #38B2AC;
+    --primary-lime : #3C873A;
+    --primary-orange : #FF8000;
+    --primary-red : #d62a0c;
+    --primary-teal : #092E20;
+    --primary-indigo : #4f5b93;
+    --primary-violet : #563d7c;
+    --primary-yellow : #f1e05a;
     
     /* Borders */
     --border-grey : #9c9c9c6b;
     --border-black : #0c0c0c6b;
-    --border-purple : #4149D9;
+    --border-purple : #4149d9e3;
     
     /* Hover */
     --hover-light : #FFDAB9;
@@ -216,6 +226,23 @@
         border-radius: 25px;
         box-shadow: inset 0px 8px 0px -2px var(--primary-purple),
                     0 0 10px rgba(0, 0, 0, 0.1);
+
+        & .contents-list {
+            & .content-item {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 0.75rem 0;
+                text-decoration: none;
+                color: var(--primary-black);
+                transition: all 0.2s ease;
+            }
+
+            & .content-item:hover {
+                color: var(--primary-purple);
+            }
+
+        }
         
         & .contents-header {
             display: flex;
@@ -325,6 +352,12 @@
         & .contents-form-main {
             padding: 0.5rem;
 
+            & label {
+                padding: 0.5rem 1rem;
+                font-size: 14px;
+                font-weight: var(--fw-semibold);
+            }
+
             & textarea {
                 resize: none;
                 border: none;
@@ -347,9 +380,42 @@
             }
         }
 
+        & .modification-form {
+            display: flex;
+
+            & .form-content {
+
+                & input {
+                    border-radius: 10px;
+                    height: 25px;
+                    padding-left: 0.5rem;
+                    border: 1px solid var(--border-grey);
+                    
+                    &:focus {
+                        outline: 1px solid var(--primary-purple);
+                    }
+                    
+                    &::placeholder {
+                        color: var(--primary-grey);
+                        font-weight: var(--fw-semibold);
+                    }
+                }
+                
+            }
+        }
+
+        & .contents-form-info {
+            display: block;
+            line-height: 1rem;
+            padding: 0.5rem 1rem;
+            font-size: 10px;
+            color: var(--primary-grey);
+            font-weight: var(--fw-semibold);
+        }
+
         & .contents-form-footer {
             display: flex;
-            justify-content: flex-end;
+            justify-content: space-between;
             padding: 0.5rem 1rem;
             gap: 1rem;
             border: none; 
@@ -369,6 +435,25 @@
 
                 &:active {
                     color: var(--primary-grey);
+                }
+            }
+
+            & .delete-btn {
+                cursor: pointer;
+                background: none;
+                border: 1px solid var(--primary-red);
+                color: var(--primary-red);
+                transition: var(--transition);
+
+                &:hover {
+                    background-color: var(--primary-red);
+                    color: var(--primary-white);
+                }
+
+                &:active {
+                    color: var(--primary-white);
+                    background-color: var(--primary-grey);
+                    border: 1px solid var(--primary-grey);
                 }
             }
         }
@@ -632,6 +717,72 @@
         }
 
         & a:active {
+            color: var(--primary-grey);
+        }
+    }
+}
+
+
+/*
+***************************
+      Profile Page
+***************************
+*/
+
+.profile-main-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    border-bottom: 1px solid var(--border-grey);
+    margin-bottom: 1rem;
+    padding: 1rem 0;
+
+    & i {
+        color: var(--primary-red);
+        margin-right: 1rem;
+    }
+
+    & p {
+        color : var(--primary-grey);
+    }
+
+    & .subscription-date {
+        display: flex;
+        gap: 1rem;
+    }
+
+}
+
+.contents-created-topics,
+.contents-created-posts {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 1rem;
+
+    & .contents-topics-list,
+    .contents-posts-list {
+
+        & .post-topic-item,
+        .post-post-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0.5rem 0;
+            border-bottom: 1px solid var(--border-grey);
+
+        }
+
+        & .post-topic-category,
+        .post-post-category {
+            color: var(--primary-purple);
+        }
+
+        & .post-topic-date,
+        .post-post-date {
+            display: flex;
+            gap: 0.5rem;
             color: var(--primary-grey);
         }
     }
