--- a/public/css/style.css
+++ b/public/css/style.css
@@ -218,9 +218,10 @@
 .main-container {
     display: flex;
     gap: clamp(1rem, 5vh, 2rem);
-
+    
     & .contents-container {
         width: clamp(300px, 80vw, 765px);
+        height: max-content;
         padding: clamp(1rem, 5vh, 2rem);
         background-color: var(--primary-white);
         border-radius: 25px;
@@ -232,8 +233,8 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                padding: 0.75rem 0;
                 text-decoration: none;
+                padding: 0.5rem 0;
                 color: var(--primary-black);
                 transition: all 0.2s ease;
                 margin-top: 10px;
@@ -244,6 +245,7 @@
                     align-items: center;
                     width: 100px;
                     justify-content: space-between;
+                    gap : 0.5rem;
 
                     & i {
                         color: var(--primary-dark-blue);
@@ -260,7 +262,7 @@
                               
                 & #btn-see-all {
                     border-radius: 25px;
-                    padding: 0.7em;
+                    padding: 0.25rem 0.5rem ;
                     border: 2px solid var(--border-purple);
                     color: var(--border-purple);    
                     transition: var(--transition);
@@ -295,7 +297,8 @@
                     & .topic-item-details {
                         display: flex;
                         justify-content: space-between;
-                        min-width: 50%;   
+                        min-width: 50%;
+                        color: var(--primary-grey);   
                         
                         & .topic-item-specs {
                             display: flex;
@@ -312,7 +315,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
         }
     }
     
@@ -534,7 +537,9 @@
     & .discussion-item {
         display: flex;
         flex-direction: column;
-        padding: 0.75rem 0;
+        padding: 1rem 0.5rem;
+        margin-bottom: 0.5rem;
+        gap : 0.75rem;
 
         & a {
             text-decoration: none;
@@ -549,7 +554,55 @@
                 color: var(--primary-grey);
             }
         }
+
+        & span {
+            font-style: italic;
+            font-size: 12px;
+            text-align: right;
+        }
+
+        & .message-delete {
+            color : var(--primary-white);
+            border : none;
+            background: none;
+            text-transform: uppercase;
+            cursor: pointer;
+            font-size: var(--font-size-label);
+            font-weight: var(--fw-bold);
+            transition: var(--transition);
+    
+            &:hover {
+                color: var(--primary-red);
+                background-color: var(--primary-white);
+                border: 1px solid var(--primary-red);
+            }
+    
+            &:active {
+                color: var(--primary-black);
+            }
+        }
     }
+
+    & .contributor {
+        border: 1px solid var(--border-grey);
+        background-color: var(--primary-grey);
+        border-radius: 25px;
+        color: var(--primary-white);
+        max-width: 45%;
+        width: fit-content;
+        margin-left: 0.5rem;
+    }
+
+    & .author {
+        border: 1px solid var(--border-purple);
+        border-radius: 25px;
+        background-color: var(--border-purple);
+        color: var(--primary-white);
+        max-width: 45%;
+        width: fit-content;
+        margin-left: auto;
+    }
+   
 }
 
 /* Buttons */
