--- a/public/css/style.css
+++ b/public/css/style.css
@@ -316,6 +316,30 @@
             align-items: center;
             justify-content: space-between;
             margin-bottom: 2rem;
+
+            & .contents-header-title {
+                display: flex;
+                gap : 0.5rem;
+
+                & .edit-btn {
+                    cursor: pointer;
+                    background: none;
+                    border: none;
+                    font-size: var(--font-size-text);
+                    font-weight: var(--fw-bold);
+                    color: var(--primary-purple);
+                    transition: var(--transition);
+                
+                    &:hover {
+                        color: var(--primary-dark-blue);
+                    }
+                
+                    &:active {
+                        color: var(--primary-grey);
+                    }
+
+                }
+            }
         }
     }
     
@@ -541,6 +565,18 @@
         margin-bottom: 0.5rem;
         gap : 0.75rem;
 
+        & .discussion-item-title {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            & .discussion-item-info {
+                display: flex;
+                justify-content: space-between;
+                
+            }
+        }
+
         & a {
             text-decoration: none;
             color: var(--primary-black);
@@ -574,7 +610,6 @@
             &:hover {
                 color: var(--primary-red);
                 background-color: var(--primary-white);
-                border: 1px solid var(--primary-red);
             }
     
             &:active {
@@ -590,6 +625,7 @@
         color: var(--primary-white);
         max-width: 45%;
         width: fit-content;
+        height: auto;
         margin-left: 0.5rem;
     }
 
@@ -600,6 +636,7 @@
         color: var(--primary-white);
         max-width: 45%;
         width: fit-content;
+        height: auto;
         margin-left: auto;
     }
    
